fix: add margin to prevent box-shadow cutoff

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-	margin: 10px 0;
+	margin: 10px;
 	font-family: 'Montserrat', sans-serif;
 	color: #555;
 }
